--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -146,7 +146,7 @@ collections:
           - { name: "footer_background", label: "Footer Background", widget: "image", required: false }
           - { name: "footer_overlay", label: "Footer Overlay", widget: "color", required: false, enableAlpha: true }
           - { name: "footer_background_color", label: "Footer Background Color", widget: "color", required: false }
-          - { name: "footer_heading_color", label: "Footer Background Color", widget: "color", required: false }
+          - { name: "footer_heading_color", label: "Footer Heading Color", widget: "color", required: false }
           - { name: "footer_text_color", label: "Footer Background Color", widget: "color", required: false }
           - { name: "about", label: "About", widget: "text", required: false }
           - { name: "disclaimer", label: "Disclaimer", widget: "markdown", required: false }
