--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -494,6 +494,14 @@ collections:
               - {label: "Body", name: "body", widget: "markdown", required: false}
               - {label: "Background Color", name: "background_color", widget: "color", required: false}
               - {label: "Body Color", name: "body_color", widget: "color", required: false}
+          - label: "Contact Page"
+            name: "contact_page"
+            widget: "object"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+              - {label: "Enable IDX Form", name: "idx_form", widget: "boolean", required: false}
           - label: "Text and Image"
             name: "text-and-image"
             widget: "object"
