Update Appearance “footer”

--- a/data/footer.yml
+++ b/data/footer.yml
@@ -1,4 +1,4 @@
-footer_logo: /images/uploads/re-logo.png
+footer_logo: /images/uploads/icon.png
 logo_width: 100
 footer_background: /images/uploads/clean-living-room_b3bubn.jpg
 footer_overlay: rgba(0, 0, 0, 0.88)
