--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://not-nextjs-framework.netlify.app'
+baseURL = 'https://realestateframe.netlify.app'
 languageCode = 'en-us'
 disableKinds = ["tags", "category", "RSS"]
