--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -1,7 +1,7 @@
 top_header_color: "#070811"
 top_header_text_color: "#e6e6e6"
-header_color: "#ffffff"
-header_text_color: "#000000"
+header_color: ""
+header_text_color: "#fff"
 mobile_icon_color: "#000"
 nav_items:
   - sub_items: []
