--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -576,6 +576,8 @@ collections:
       - {label: "Image Alt Tag", name: "alt_tag", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Is Post", name: "is_post", widget: "hidden", default: true, required: false}
+      - {label: "Title Tag", name: "title_tag", widget: "string"}
+      - {label: "Meta Description", name: "meta_description", widget: "text"}
 
 # LEGAL
   - name: "legal" # Used in routes, e.g., /admin/collections/blog
