Update Settings “data_profile”

--- a/data/profile.yml
+++ b/data/profile.yml
@@ -1,4 +1,4 @@
-company_name: Hungry Ram Web Design
+company_name: Real Estate Company
 contact_information:
   address:
     street: "5511 Mirage St. #1007"
@@ -21,5 +21,5 @@ contact_information:
     pinterest: ""
     linkedin: https://linkedin.com
   seo:
-    title_tag: My website is awesome
-    meta_description: this is the website that I am doing
+    title_tag: Real Estate Company
+    meta_description: Vesper real estate template
