--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -148,7 +148,7 @@ collections:
           - { name: "footer_background_color", label: "Footer Background Color", widget: "color", required: false }
           - { name: "footer_heading_color", label: "Footer Heading Color", widget: "color", required: false }
           - { name: "footer_text_color", label: "Footer Text Color", widget: "color", required: false }
-          - { name: "about", label: "About", widget: "text", required: false }
+          - { name: "about", label: "About", widget: "markdown", required: false }
           - { name: "disclaimer", label: "Disclaimer", widget: "markdown", required: false }
           - { name: "enable_realtor_logo", label: "Enable Realtor Logo", widget: "boolean", required: false }
           - { name: "enable_equal_housing_logo", label: "Enable Equal Housing Logo", widget: "boolean", required: false }
