--- a/data/appearance.yml
+++ b/data/appearance.yml
@@ -1,6 +1,6 @@
 header_top_header_color: "#171414"
 header_header_background_color: "#e7e7e7"
-colors_primary_button_background_color: "#1fa7ad"
+colors_primary_button_background_color: "#01888e"
 colors_primary_button_text_color: "#ffffff"
 colors_accent: "#1fa7ad"
 banner_image_overlay: rgba(0, 0, 0, 0.76)
