--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "npx tailwindcss -i ./assets/css/main.css -o ./assets/css/style.css",
-    "watch": "npx tailwindcss -i ./assets/css/main.css -o ./assets/css/style.css --watch"
+    "build": "npx tailwindcss -i ./assets/css/main.css -o static/assets/css/style.css",
+    "watch": "npx tailwindcss -i ./assets/css/main.css -o static/assets/css/style.css --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
