--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -472,6 +472,7 @@ collections:
                 fields:
                   - {label: "Body", name: "body", widget: "markdown", required: false}
                   - {label: "Image", name: "image", widget: "image", required: false}
+                  - {label: "Alt Text", name: "alt_text", widget: "string", required: false}
                   - {label: "Button Text", name: "button", widget: "string", required: false}
                   - {label: "Button Link", name: "button_link", widget: "string", required: false}
           - label: "Team Section"
