--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -232,6 +232,7 @@ collections:
                   - {label: "Body", name: "body", widget: "markdown", required: false}
                   - {label: "Column Number", name: "column_number", widget: "number", min: 2, max: 4, value_type: int, required: false}
                   - {label: "Background Image", name: "background_image", widget: "image", required: false}
+                  - {label: "Alt Text", name: "alt_text", widget: "string", required: false}
                   - {label: "Background Color", name: "background_color", widget: "color", required: false}
                   - {label: "Body Color", name: "body_color", widget: "color", required: false}
                   - label: "Featured Blocks"
@@ -241,6 +242,7 @@ collections:
                     fields:
                       - {label: "Body", name: "body", widget: "markdown", required: false}
                       - {label: "Image", name: "image", widget: "image", required: false}
+                      - {label: "Alt Text", name: "alt_text", widget: "string", required: false}
                       - {label: "Button Text", name: "button", widget: "string", required: false}
                       - {label: "Button Link", name: "button_link", widget: "string", required: false}
               - label: "Featured Panel"
@@ -251,6 +253,7 @@ collections:
                   - {label: "Enable Slider", name: "slider", widget: "boolean", required: false}
                   - {label: "Column Number", name: "column_number", widget: "number", min: 2, max: 4, value_type: int, required: false}
                   - {label: "Background Image", name: "background_image", widget: "image", required: false}
+                  - {label: "Alt Text", name: "alt_text", widget: "string", required: false}
                   - {label: "Background Color", name: "background_color", widget: "color", required: false}
                   - {label: "Body Color", name: "body_color", widget: "color", required: false}
                   - label: "Featured Blocks"
@@ -260,6 +263,7 @@ collections:
                     fields:
                       - {label: "Body", name: "body", widget: "markdown", required: false}
                       - {label: "Image", name: "image", widget: "image", required: false}
+                      - {label: "Alt Text", name: "alt_text", widget: "string", required: false}
                       - {label: "Button Text", name: "button", widget: "string", required: false}
                       - {label: "Button Link", name: "button_link", widget: "string", required: false}
               - label: "Team Section"
@@ -287,6 +291,7 @@ collections:
                   - {label: "Background Color", name: "background_color", widget: "color", required: false}
                   - {label: "Background Image Overlay", name: "background_image_overlay", widget: "color", required: false, enableAlpha: true}
                   - {label: "Background Image", name: "background_image", widget: "image", required: false}
+                  - {label: "Alt Text", name: "alt_text", widget: "string", required: false}
                   - {label: "Body Color", name: "body_color", widget: "color", required: false}
               - label: "Quick Search"
                 name: "quick_search_idx"
