--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -716,6 +716,9 @@ collections:
 # IDX
   - name: "idx_admin" # Used in routes, e.g., /admin/collections/blog
     label: "IDX Admin" # Used in the UI
+    folder: "/content/idx-admin" # The path to the folder where the documents are stored
+    create: false
     editor:
       preview: false
-    hint: "[IDX Admin](https://ihomefinder.com)"
+    fields: # The fields for each document, usually in front matter
+      - {label: "Name", name: "title", widget: "string", required: false, hint: "(IDX Admin)[https://ihomefinder.com]"}
