--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -721,5 +721,5 @@ collections:
     editor:
       preview: false
     fields: # The fields for each document, usually in front matter
-      - {label: "Client ID", name: "title", widget: "string", required: false, hint: "[Open IDX Admin](https://www.ihomefinder.com/)
+      - {label: "Client ID", name: "title", widget: "string", required: false, hint: "[Click Here to Open IDX Admin](https://www.ihomefinder.com/)
 "}
