--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -135,8 +135,9 @@ collections:
             name: call_to_action_link
             widget: "relation"
             collection: "pages"
-            value_fields: "title"
-            search_fields: "title"
+            search_fields: ["name.first", "twitterHandle"]
+            value_field: "title"
+            display_fields: ["twitterHandle", "followerCount"]
             required: false
       - name: "footer" # This is the file name without the extension
         label: "Footer" # Label for the file in the CMS
