--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -136,7 +136,7 @@ collections:
             widget: "relation"
             collection: "pages"
             search_fields: ["title", "twitterHandle"]
-            value_field: "title"
+            value_field: "slug"
             display_fields: ["title", "followerCount"]
             required: false
       - name: "footer" # This is the file name without the extension
