Update Appearance “navigation”

--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -31,4 +31,4 @@ nav_items:
   - label: Contact
     path: /contact
 call_to_action_text: My Account
-call_to_action_link: Contact Us
+call_to_action_link: pending-featured-listings
