--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -33,4 +33,4 @@ nav_items:
 call_to_action_text: My Account
 call_to_action_external: /contact
 call_to_action_link: pending-featured-listings
-new_tab: true
+new_tab: false
