--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -128,7 +128,9 @@ collections:
                 widget: list
                 fields:
                   - { label: Label, name: label, widget: string }
-                  - { label: Path, name: path, widget: string }
+                  - { label: Path, name: path, widget: relation, display_fields: ["title"], value_field: "{{slug}}", search_fields: ["title"], collection: pages, required: false }
+                  - { label: External URL, name: external_url, widget: string, required: false }
+                  - { label: New Tab, name: new_tab, widget: boolean, required: false }
           - label: Call to Action Text
             name: call_to_action_text
             widget: string
